Agrega teléfonoc a contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Contacto</h1>
+    <h2>Vía telefónica</h2>
+    <p>Llamanos al <a href="tel:+5491140007000">(011) 4000-7000</a> de lunes a viernes de 11 a 17h.</p>
 </body>
 </html>
