--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,6 @@
     <h2>Vía telefónica</h2>
     <p>Llamanos al <a href="tel:+5491140007000">(011) 4000-7000</a> de lunes a viernes de 11 a 17h.</p>
     <h2>Por email</h2>
-    <p>Envianod un email a <a href="mailto:info@sitio.com">info@sitio.com</a> y te contestaremos a la brevedad posible.</p>
+    <p>Envíanos un email a <a href="mailto:info@sitio.com">info@sitio.com</a> y te contestaremos a la brevedad posible.</p>
 </body>
 </html>
