Agrega header a la sucursal Rosario en sucursales.html

--- a/sucursales.html
+++ b/sucursales.html
@@ -10,7 +10,10 @@
     <h1>Sucursales</h1>
     <!-- article*4>h2+p*2>lorem15-->
     <article>
-        <h2>Rosario</h2>
+        <header>
+            <h2>Rosario</h2>
+            <p>Telèfono: (011) 5222-3333</p>
+        </header>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, cum sunt laudantium cupiditate quas nemo.</p>
         <p>Amet et ipsum, error optio pariatur alias magnam voluptas quam, veniam voluptatem fugiat, atque iste.</p>
     </article>
