Agrega encabezados a sucursales la Plata y Balvanera
Adiciona Teléfonos

--- a/sucursales.html
+++ b/sucursales.html
@@ -18,13 +18,19 @@
         <p>Amet et ipsum, error optio pariatur alias magnam voluptas quam, veniam voluptatem fugiat, atque iste.</p>
     </article>
     <article>
-        <h2>Balvanera</h2>
+        <header>
+            <h2>Balvanera</h2>
+            <p>Telèfono: (011) 5800-0000</p>
+        </header>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia optio eum dolorem ab, deleniti fugit tempore fuga asperiores animi, in perferendis voluptate maiores aliquid similique aperiam vel blanditiis debitis ad?</p>
         <p>Animi velit veniam nemo iste, ea eius deserunt vitae blanditiis exercitationem dolores eos vel incidunt ex numquam aperiam. Accusantium vero voluptate beatae minima neque eligendi eum aspernatur quibusdam, consectetur temporibus!</p>
         <p>Reprehenderit adipisci nesciunt consectetur repellat expedita sed magni voluptas omnis sit facilis rerum aliquam, quae distinctio, accusamus porro quibusdam atque ipsam iusto blanditiis perspiciatis! Praesentium est labore hic ea dolor!</p>
     </article>
     <article>
-        <h2>La Plata</h2>
+        <header>
+            <h2>La Plata</h2>
+            <p>Telèfono: (0221) 522-4333//4445</p>
+        </header>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium a molestias exercitationem, mollitia obcaecati totam!</p>
         <p>In quod numquam quo at. Quos labore temporibus doloribus fugit reiciendis? Ab sed a iste.</p>
     </article>
