Corrige Teléfono de susursal Rosario en sucursales.html, además se corrige la palabra teléfono

--- a/sucursales.html
+++ b/sucursales.html
@@ -12,7 +12,7 @@
     <article>
         <header>
             <h2>Rosario</h2>
-            <p>Telèfono: (011) 5222-3333</p>
+            <p>Teléfono: (0341) 522-3333</p>
         </header>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, cum sunt laudantium cupiditate quas nemo.</p>
         <p>Amet et ipsum, error optio pariatur alias magnam voluptas quam, veniam voluptatem fugiat, atque iste.</p>
@@ -20,7 +20,7 @@
     <article>
         <header>
             <h2>Balvanera</h2>
-            <p>Telèfono: (011) 5800-0000</p>
+            <p>Teléfono: (011) 5800-0000</p>
         </header>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia optio eum dolorem ab, deleniti fugit tempore fuga asperiores animi, in perferendis voluptate maiores aliquid similique aperiam vel blanditiis debitis ad?</p>
         <p>Animi velit veniam nemo iste, ea eius deserunt vitae blanditiis exercitationem dolores eos vel incidunt ex numquam aperiam. Accusantium vero voluptate beatae minima neque eligendi eum aspernatur quibusdam, consectetur temporibus!</p>
@@ -29,7 +29,7 @@
     <article>
         <header>
             <h2>La Plata</h2>
-            <p>Telèfono: (0221) 522-4333//4445</p>
+            <p>Teléfono: (0221) 522-4333//4445</p>
         </header>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium a molestias exercitationem, mollitia obcaecati totam!</p>
         <p>In quod numquam quo at. Quos labore temporibus doloribus fugit reiciendis? Ab sed a iste.</p>
