--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="sucursales.html">Sucursales</a></li>
+            <li><a href="contacto.html"></a>Contacto</li>
+        </ul>
+    </nav>
     <h1>Inicio</h1>
     
 </body>
