--- a/servicios.html
+++ b/servicios.html
@@ -7,6 +7,14 @@
     <title>Servicios</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="sucursales.html">Sucursales</a></li>
+            <li><a href="contacto.html"></a>Contacto</li>
+        </ul>
+    </nav>
     <h1>Servicios</h1>
     
 </body>
