--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,14 @@
     <title>Contacto</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="sucursales.html">Sucursales</a></li>
+            <li><a href="contacto.html"></a>Contacto</li>
+        </ul>
+    </nav>
     <h1>Contacto</h1>
     <h2>Vía telefónica</h2>
     <p>Llamanos al <a href="tel:+5491140007000">(011) 4000-7000</a> de lunes a viernes de 11 a 17h.</p>
