--- a/sucursales.html
+++ b/sucursales.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="nav-list">
             <li class="nav__list-item"><a href="index.html">Inicio</a></li>
             <li class="nav__list-item"><a href="servicios.html">Servicios</a></li>
             <li class="nav__list-item"><a href="sucursales.html">Sucursales</a></li>
