Agrega párrafos en index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </ul>
     </nav>
     <h1>Inicio</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, labore dolor perspiciatis magnam aliquam libero iure, ipsam perferendis corrupti quasi doloremque est accusantium sint minima! Error facilis maiores dolorem quas!</p>
+    <p>Et temporibus atque non ab labore nam. Vitae adipisci consequatur, quibusdam sit facilis rerum asperiores quas debitis maxime saepe praesentium ex a qui quae aspernatur! Perspiciatis amet in fugit sit?</p>
     
 </body>
 </html>
