--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <li class="nav__list-item"><a href="contacto.html"></a>Contacto</li>
         </ul>
     </nav>
+    <section class="cart"></section>
+        <h2>Carrito</h2>
     <h1>Inicio</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, labore dolor perspiciatis magnam aliquam libero iure, ipsam perferendis corrupti quasi doloremque est accusantium sint minima! Error facilis maiores dolorem quas!</p>
     <p>Et temporibus atque non ab labore nam. Vitae adipisci consequatur, quibusdam sit facilis rerum asperiores quas debitis maxime saepe praesentium ex a qui quae aspernatur! Perspiciatis amet in fugit sit?</p>
