Se corrigen archivos style.css e index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="nav__list-item"><a href="contacto.html"></a>Contacto</li>
         </ul>
     </nav>
-    <section class="cart"></section>
+    <section class="cart">
         <h2>Carrito</h2>
         <ul>
             <li>Lorem, ipsum.</li>
@@ -25,6 +25,7 @@
             <li>Voluptatem, totam!</li>
             <li>Dolores, cumque!</li>
         </ul>
+    </section>
     <h1>Inicio</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, labore dolor perspiciatis magnam aliquam libero iure, ipsam perferendis corrupti quasi doloremque est accusantium sint minima! Error facilis maiores dolorem quas!</p>
     <p>Et temporibus atque non ab labore nam. Vitae adipisci consequatur, quibusdam sit facilis rerum asperiores quas debitis maxime saepe praesentium ex a qui quae aspernatur! Perspiciatis amet in fugit sit?</p>
