Agrega total de carrito a index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li>Voluptatem, totam!</li>
             <li>Dolores, cumque!</li>
         </ul>
+        <p>Total: $4.200</p>
     </section>
     <h1>Inicio</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, labore dolor perspiciatis magnam aliquam libero iure, ipsam perferendis corrupti quasi doloremque est accusantium sint minima! Error facilis maiores dolorem quas!</p>
