--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, labore dolor perspiciatis magnam aliquam libero iure, ipsam perferendis corrupti quasi doloremque est accusantium sint minima! Error facilis maiores dolorem quas!</p>
         <p>Et temporibus atque non ab labore nam. Vitae adipisci consequatur, quibusdam sit facilis rerum asperiores quas debitis maxime saepe praesentium ex a qui quae aspernatur! Perspiciatis amet in fugit sit?</p>
     </main>
+    <footer>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </footer>
 </body>
 </html>
