Agrega información de Copyright a footer de index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </main>
     <footer>
         <p>Lorem ipsum dolor sit amet.</p>
+        <p>&copy; 2023 - Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
