Agrega footer a todos los html
Contenido del footer:
información del Copyright

Archivos modificados:
contacto.html
servicios.html
sucursales.html

--- a/contacto.html
+++ b/contacto.html
@@ -42,5 +42,9 @@
         </div>
         <input type="submit" value="Enviar consulta">
     </form>
+    <footer>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>&copy; 2023 - Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
