--- a/servicios.html
+++ b/servicios.html
@@ -17,6 +17,9 @@
         </ul>
     </nav>
     <h1>Servicios</h1>
-    
+    <footer>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>&copy; 2023 - Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
