--- a/sucursales.html
+++ b/sucursales.html
@@ -53,5 +53,9 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure iste consequuntur suscipit molestiae, in laudantium!</p>
         <p>Pariatur maiores nulla voluptatem ratione cupiditate corporis voluptates cum doloremque. At minus non eveniet adipisci.</p>
     </article>
+    <footer>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>&copy; 2023 - Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
