--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
     </nav>
     <h1>Contacto</h1>
     <h2>Vía telefónica</h2>
-    <p>Llamanos al <a href="tel:+5491140007000">(011) 4000-7000</a> de lunes a viernes de 11 a 17h.</p>
+    <p>Llamanos al <a href="tel:+5491140007000">(011) 4000-7000 o al (011) 25 47 11-1818</a> de lunes a viernes de 11 a 17h.</p>
     <h2>Por email</h2>
     <p>Envíanos un email a <a href="mailto:info@sitio.com">info@sitio.com</a> y te contestaremos a la brevedad posible.</p>
     <h2>Formulario de cointacto</h2>
